# filecaster

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
filecaster/: Cargo.toml
filecaster-derive/: Cargo.toml
filecaster-derive/src/: from_file.rs  lib.rs
filecaster-derive/src/from_file/: ast.rs  codegen.rs  error.rs  grammar.rs  mod.rs  parser.rs
filecaster/examples/: nested.rs  simple.rs
filecaster/examples/data/: nested.json  nested.toml  simple.json  simple.toml
filecaster/src/: lib.rs
filecaster/tests/: from_file.rs  from_file_io.rs  nested_structure.rs
filecaster/tests/ui/: enum_not_supported.rs  enum_not_supported.stderr  invalid_attr.rs  tuple_struct_not_supported.rs  tuple_struct_not_supported.stderr
src/: derive_from_file.rs  from_file.rs  lib.rs
tests/: from_file.rs
