[package]
name = "filecaster"
version = "0.1.0"
edition = "2024"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
description = "Procedural macro to derive configuration from files, with optional merging capabilities."
repository = "https://github.com/kristoferssolo/filecaster"
documentation = "https://docs.rs/filecaster"
homepage = "https://github.com/kristoferssolo/filecaster"
license = "MIT OR Apache-2.0"
keywords = [
  "proc-macro",
  "derive",
  "configuration",
  "file-parsing",
  "defaults",
  "merge",
]
categories = ["development-tools::procedural-macro", "parsing", "config"]
exclude = ["/.github", "/.gitignore", "/tests", "*.png", "*.md"]
readme = "README.md"

[features]
default = []
merge = ["dep:merge"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
merge = { version = "0.2", optional = true }

[lib]
proc-macro = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
