[workspace]
resolver = "2"
members = ["filecaster", "filecaster-derive"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
merge = "0.2"
# dev-dependencies
claims = "0.8"
serde_json = "1.0"
tempfile = "3.10"
toml = "0.9"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
