[workspace]
resolver = "2"
members = ["filecaster", "filecaster-derive"]

[workspace.dependencies]
filecaster-derive = { version = "0.2", path = "filecaster-derive" }
serde = { version = "1.0", features = ["derive"], default-features = false }
merge = "0.2"
thiserror = "2"
# dev-dependencies
filecaster = { path = "filecaster" }
claims = "0.8"
serde_json = "1.0"
tempfile = "3.10"
toml = "0.9"
trybuild = "1.0"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
