[package]
name = "filecaster-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
default = []
merge = ["dep:merge"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-error2 = "2.0"
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
serde.workspace = true
merge = { workspace = true, optional = true }

[dev-dependencies]
claims.workspace = true
