[package]
name = "filecaster"
version = "0.2.3"
edition = "2024"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
description = "Procedural macro to derive configuration from files, with optional merging capabilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kristoferssolo/filecaster"
homepage = "https://github.com/kristoferssolo/filecaster"
documentation = "https://docs.rs/filecaster"
readme = "../README.md"
keywords = ["configuration", "file-parsing"]
categories = ["rust-patterns", "parsing", "config"]
exclude = ["/.github", "/.gitignore", "/tests", "*.png", "*.md"]

[features]
default = ["serde", "derive"]
derive = ["dep:filecaster-derive"]
serde = ["dep:serde", "filecaster-derive/serde"]
merge = ["dep:merge", "filecaster-derive/merge"]

[dependencies]
filecaster-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
merge = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
trybuild.workspace = true
